# GetAway

./: .gitignore  .gitmodules  CMakeLists.txt  Policy.txt  README.md  doc  test.py
Client/: CMakeLists.txt  main.cpp
ClientTest/: CMakeLists.txt  main.cpp
GetAway/: main.cpp
GetAway/header/: Log_Macro.hpp  ManagementFunctions.hpp  androidClientMain.hpp  androidMain.hpp  androidServerMain.hpp  appState.hpp  bluffPData.hpp  clientAuth.hpp  clientAuthManager.hpp  clientAuthenticationManager.hpp  clientBluff.hpp  clientChat.hpp  clientChatManager.hpp  clientConnector.hpp  clientGameManager.hpp  clientGetAway.hpp  clientGetAwayPF.hpp  clientHome.hpp  clientHomePF.hpp  clientLobby.hpp  clientLobbyManager.hpp  clientLobbySession.hpp  clientLobbySessionState.hpp  clientRoomManager.hpp  clientSession.h  clientSession.hpp  clientState.hpp  clientTcpSession.hpp  clientTcpSessionState.hpp  constants.h  constants.hpp  deckSuit.hpp  gamePF.hpp  getAwayPData.hpp  home.hpp  homePF.hpp  inputType.h  inputType.hpp  lobbyPF.hpp  messagePF.hpp  (+34 more)
GetAway/src/: ManagementFunctions.cpp  androidClientMain.cpp  androidMain.cpp  androidServerMain.cpp  bluffPData.cpp  clientAuth.cpp  clientAuthManager.cpp  clientAuthenticationManager.cpp  clientBluff.cpp  clientBluffPF.cpp  clientChat.cpp  clientChatManager.cpp  clientChatPF.cpp  clientConnector.cpp  clientGameManager.cpp  clientGetAway.cpp  clientGetAwayPF.cpp  clientHome.cpp  clientHomePF.cpp  clientLobby.cpp  clientLobbyManager.cpp  clientLobbyManager.cpp.orig  clientLobbyPF.cpp  clientLobbySession.cpp  clientLobbySessionState.cpp  clientRoomManager.cpp  clientState.cpp  clientTcpSession.cpp  clientTcpSessionState.cpp  constants.cpp  deckSuit.cpp  gamePF.cpp  getAwayPData.cpp  home.cpp  homePF.cpp  listener.cpp  lobbyPF.cpp  messagePF.cpp  messageProcessing.cpp  messageTypeEnums.cpp  (+30 more)
Source/: main.cpp
Source/header/: listener.hpp  tcp_session.hpp
Source/src/: shared_state.cpp
Test/: CMakeLists.txt  main.cpp
Test/GetAway/: GetAwayTest.cpp  GetAwayTest.hpp  inferior.hpp  main.cpp
